fix(backend): prod ddl-auto를 update로 변경해 신규 테이블 누락 기동 실패 복구
prod 프로필이 ddl-auto=validate여서 신규 엔티티 테이블
(risk_transactions, system_logs, failed_event_log)이 DB에 없으면
Schema-validation 실패로 애플리케이션이 부팅되지 않던 문제를 해결.
마이그레이션 도구(Flyway/Liquibase) 부재로 스키마를 Hibernate가 관리하며,
update는 추가만 하고 삭제하지 않아 기존 데이터는 안전.

함께 포함: AdminService/AdminServiceImpl 가독성 정리(와일드카드 import 통합,
Collectors.toList()->toList()). 동작 변화 없음.

clean build 통과.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>